--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -14,8 +14,12 @@
 				<input type="text" id="username" th:field="*{username}">
 			</div>
 			<!-- error.username es igual a errores.get('username') -->
-			<div th:if="${error != null && error.containsKey('username')}"
-				th:text="${error.username}"></div>
+			<!-- 'Original': <div th:if="${error != null && error.containsKey('username')}"
+				th:text="${error.username}"></div>  -->
+				<!-- #fields.hasErrors Se usa para llamar a un helper de thymeleaf en este caso el de las validaciones de campos -->
+				<!-- th:errors llama a los errores que pueda haber -->
+			<div th:if="${#fields.hasErrors('username')}"
+				th:errors="*{username}"></div>
 		</div>
 		<div>
 			<label for="password">Password</label>
@@ -23,8 +27,10 @@
 				<!-- 'Original': <input type="password" name="password" id="password"> -->
 				<input type="password" id="password" th:field="*{password}">
 			</div>
-			<div th:if="${error != null && error.containsKey('password')}"
-				th:text="${error.password}"></div>
+			<!-- 'Original': <div th:if="${error != null && error.containsKey('password')}"
+				th:text="${error.password}"></div>  -->
+			<div th:if="${#fields.hasErrors('password')}"
+				th:errors="*{password}"></div>
 		</div>
 		<div>
 			<label for="email">Email</label>
@@ -32,8 +38,10 @@
 				<!-- 'Original': <input type="text" name="email" id="email" th:value="${user.email}"> -->
 				<input type="text" id="email" th:field="*{email}">
 			</div>
-			<div th:if="${error != null && error.containsKey('email')}"
-				th:text="${error.email}"></div>
+			<!--  'Original': <div th:if="${error != null && error.containsKey('email')}"
+				th:text="${error.email}"></div>  -->
+			<div th:if="${#fields.hasErrors('email')}"
+				th:errors="*{email}"></div>
 		</div>
 		<div>
 			<div>
