--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -8,6 +8,20 @@
 	<h2 th:text="${titulo}"></h2>
 	<form th:action="@{/form}" th:object="${usuario}" method="post">
 		<div>
+			<label for="nombre">Nombre</label>
+			<div>
+				<input type="text" id="nombre" th:field="*{nombre}">
+			</div>
+			<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
+		</div>
+		<div>
+			<label for="apellido">Apellido</label>
+			<div>
+				<input type="text" id="apellido" th:field="*{apellido}">
+			</div>
+			<div th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></div>
+		</div>
+		<div>
 			<label for="username">Username</label>
 			<div>
 				<!-- 'Original': <input type="text" name="username" id="username" th:value="${user.username}"> -->
@@ -16,10 +30,9 @@
 			<!-- error.username es igual a errores.get('username') -->
 			<!-- 'Original': <div th:if="${error != null && error.containsKey('username')}"
 				th:text="${error.username}"></div>  -->
-				<!-- #fields.hasErrors Se usa para llamar a un helper de thymeleaf en este caso el de las validaciones de campos -->
-				<!-- th:errors llama a los errores que pueda haber -->
-			<div th:if="${#fields.hasErrors('username')}"
-				th:errors="*{username}"></div>
+			<!-- #fields.hasErrors Se usa para llamar a un helper de thymeleaf en este caso el de las validaciones de campos -->
+			<!-- th:errors llama a los errores que pueda haber -->
+			<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
 		</div>
 		<div>
 			<label for="password">Password</label>
@@ -29,8 +42,7 @@
 			</div>
 			<!-- 'Original': <div th:if="${error != null && error.containsKey('password')}"
 				th:text="${error.password}"></div>  -->
-			<div th:if="${#fields.hasErrors('password')}"
-				th:errors="*{password}"></div>
+			<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
 		</div>
 		<div>
 			<label for="email">Email</label>
@@ -40,8 +52,7 @@
 			</div>
 			<!--  'Original': <div th:if="${error != null && error.containsKey('email')}"
 				th:text="${error.email}"></div>  -->
-			<div th:if="${#fields.hasErrors('email')}"
-				th:errors="*{email}"></div>
+			<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
 		</div>
 		<div>
 			<div>
