--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h2 th:text="${titulo}"></h2>
+	<!-- El nombre dentro de th:object se usa en messages.properties -->
 	<form th:action="@{/form}" th:object="${usuario}" method="post">
 		<div>
 			<label for="nombre">Nombre</label>
