Lista de paises mostrando por id No se envia el pais solamente el id

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -11,13 +11,14 @@
 		<div>
 			<label for="pais">Pais</label>
 			<div>
-				<select id="pais" th:field="*{pais}">
-				<option value="">-- Seleccione pais --</option>
-				<option th:each="pais: ${paises}" th:text="${pais}" th:value="${pais}"></option>
+				<select id="pais" th:field="*{pais.id}">
+					<option value="">-- Seleccione pais --</option>
+					<!-- Aqui se usa el nombre del controller que devuelve la lista (no confundir con el nombre del campo en el modelo del thfield del select -->
+					<option th:each="pais: ${listaPaises}" th:text="${pais.nombre}"
+						th:value="${pais.id}"></option>
 				</select>
 			</div>
-			<div th:if="${#fields.hasErrors('pais')}"
-				th:errors="*{pais}"></div>
+			<div th:if="${#fields.hasErrors('pais.id')}" th:errors="*{pais.id}"></div>
 		</div>
 		<div>
 			<label for="identificador">Identificador</label>
