Finalizada implementacion checkboxes con clase Role
Comenzada clase de checkbox habilitar para manejar el true/false

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -9,13 +9,18 @@
 	<!-- El nombre dentro de th:object se usa en messages.properties -->
 	<form th:action="@{/form}" th:object="${usuario}" method="post">
 		<div>
+			<label for="habilitar">Habilitar</label>
+			<div>
+				<input type="checkbox" id="habilitar" th:field="*{habilitar}">
+			</div>			
+		</div>
+		<div>
 			<label>Roles</label>
-			<div th:each="role: ${rolesString}">
-				<input type="checkbox" th:field="*{roles}" th:value="${role}">
-				<label th:for="${#ids.prev('roles')}" th:text="${role}"></label>
+			<div th:each="role: ${listaRoles}">
+				<input type="checkbox" th:field="*{roles}" th:value="${role.id}">
+				<label th:for="${#ids.prev('roles')}" th:text="${role.nombre}"></label>
 			</div>
-			<div th:if="${#fields.hasErrors('roles')}"
-				th:errors="*{roles}"></div>
+			<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}"></div>
 		</div>
 		<div>
 			<label for="pais">Pais</label>
