--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -22,7 +22,7 @@
 	</ul>
 	<div>Roles</div>
 	<ul>
-		<li th:each="role: ${usuario.roles}" th:text="${role}"></li>
+		<li th:each="role: ${usuario.roles}" th:text="${role.rol} + ' => '+${role.id}+' => '+${role.nombre}"></li>
 	</ul>
 </body>
 </html>
