--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -15,6 +15,15 @@
 			</div>			
 		</div>
 		<div>
+			<label>Genero</label>
+			<div th:each="gen: ${generos}">
+				<input type="radio" th:field="*{genero}" th:value="${gen}">
+				<label th:for="${#ids.prev('genero')}" th:text="${gen}"></label>
+			</div>			
+			<div th:if="${#fields.hasErrors('genero')}"
+				th:errors="*{genero}"></div>
+		</div>
+		<div>
 			<label>Roles</label>
 			<div th:each="role: ${listaRoles}">
 				<input type="checkbox" th:field="*{roles}" th:value="${role.id}">
