--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -18,6 +18,8 @@
 		<li th:text="${usuario.pais.id}"></li>
 		<li th:text="${usuario.pais.codigo}"></li>
 		<li th:text="${usuario.pais.nombre}"></li>
+		<li th:text="'Habilitado: '+${usuario.habilitar}"></li>
+		<li th:text="'Genero: '+${usuario.genero}"></li>
 		<li th:text="${#dates.format(usuario.fechaNac, 'dd/MM/yyyy')}"></li>
 	</ul>
 	<div>Roles</div>
