--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -26,7 +26,9 @@
 		<div>
 			<label>Roles</label>
 			<div th:each="role: ${listaRoles}">
-				<input type="checkbox" th:field="*{roles}" th:value="${role.id}">
+			<!-- #lists.contains('roles', role) = Helper de thymeleaf que comprueba si en la lista del primer parámetro aparece el segundo parámetro  -->
+				<input type="checkbox" th:field="*{roles}" th:value="${role.id}"
+				th:checked="${#lists.contains(usuario.roles, role)}">
 				<label th:for="${#ids.prev('roles')}" th:text="${role.nombre}"></label>
 			</div>
 			<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}"></div>
