--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -3,125 +3,145 @@
 <head>
 <meta charset="UTF-8">
 <title th:text="${titulo}"></title>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+	crossorigin="anonymous">
 </head>
 <body>
 	<h2 th:text="${titulo}"></h2>
-	<!-- El nombre dentro de th:object se usa en messages.properties -->
-	<form th:action="@{/form}" th:object="${usuario}" method="post">
-		<div>
-			<label for="habilitar">Habilitar</label>
-			<div>
-				<input type="checkbox" id="habilitar" th:field="*{habilitar}">
-			</div>			
-		</div>
-		<div>
-			<label>Genero</label>
-			<div th:each="gen: ${generos}">
-				<input type="radio" th:field="*{genero}" th:value="${gen}">
-				<label th:for="${#ids.prev('genero')}" th:text="${gen}"></label>
-			</div>			
-			<div th:if="${#fields.hasErrors('genero')}"
-				th:errors="*{genero}"></div>
-		</div>
-		<div>
-			<label>Roles</label>
-			<div th:each="role: ${listaRoles}">
-			<!-- #lists.contains('roles', role) = Helper de thymeleaf que comprueba si en la lista del primer parámetro aparece el segundo parámetro  -->
-				<input type="checkbox" th:field="*{roles}" th:value="${role.id}"
-				th:checked="${#lists.contains(usuario.roles, role)}">
-				<label th:for="${#ids.prev('roles')}" th:text="${role.nombre}"></label>
+	<div class="container">
+		<!-- El nombre dentro de th:object se usa en messages.properties -->
+		<form th:action="@{/form}" th:object="${usuario}" method="post">
+			<div class="form-group row">
+				<label for="habilitar" class="col-form-label col-sm-2">Habilitar</label>
+				<div class="row col-sm-4">
+					<input type="checkbox" id="habilitar" th:field="*{habilitar}"
+						class="form-check-input col-sm-1">
+				</div>
 			</div>
-			<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}"></div>
-		</div>
-		<div>
-			<label for="pais">Pais</label>
-			<div>
-				<select id="pais" th:field="*{pais}">
-					<option value="">-- Seleccione pais --</option>
-					<!-- Aqui se usa el nombre del controller que devuelve la lista (no confundir con el nombre del campo en el modelo del thfield del select -->
-					<option th:each="pais: ${listaPaises}" th:text="${pais.nombre}"
-						th:value="${pais.id}"></option>
-				</select>
+			<div class="form-group row">
+				<label class="col-form-label col-sm-2">Genero</label>
+				<div th:each="gen: ${generos}"  class="row col-sm-2">
+					<input type="radio" th:field="*{genero}" th:value="${gen}"
+						class="form-check-input col-sm-1"> <label
+						th:for="${#ids.prev('genero')}" th:text="${gen}" class="col-form-label col-sm-1"></label>
+				</div>
+				<div th:if="${#fields.hasErrors('genero')}" th:errors="*{genero}" class="alert alert-danger col-sm-2 col-sm-1"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}"></div>
-		</div>
-		<div>
-			<label for="identificador">Identificador</label>
-			<div>
-				<input type="text" id="identificador" th:field="*{identificador}">
+			<div class="form-group row">
+				<label class="col-form-label col-sm-2">Roles</label>
+				<div th:each="role: ${listaRoles}"  class="row col-sm-2">
+					<!-- #lists.contains('roles', role) = Helper de thymeleaf que comprueba si en la lista del primer parámetro aparece el segundo parámetro  -->
+					<input type="checkbox" th:field="*{roles}" th:value="${role.id}"
+						th:checked="${#lists.contains(usuario.roles, role)}"
+						class="form-check-input col-sm-1"> <label
+						th:for="${#ids.prev('roles')}" th:text="${role.nombre}" class="col-form-label col-sm-1"></label>
+				</div>
+				<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}" class="alert alert-danger col-sm-2 col-sm-1"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('identificador')}"
-				th:errors="*{identificador}"></div>
-		</div>
-		<div>
-			<label for="nombre">Nombre</label>
-			<div>
-				<input type="text" id="nombre" th:field="*{nombre}">
+			<div class="form-group row">
+				<label for="pais" class="col-form-label col-sm-2">Pais</label>
+				<div class="row col-sm-4">
+					<select id="pais" th:field="*{pais}" class="form-control">
+						<option value="">-- Seleccione pais --</option>
+						<!-- Aqui se usa el nombre del controller que devuelve la lista (no confundir con el nombre del campo en el modelo del thfield del select -->
+						<option th:each="pais: ${listaPaises}" th:text="${pais.nombre}"
+							th:value="${pais.id}"></option>
+					</select>
+				</div>
+				<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}" class="alert alert-danger col-sm-2"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
-		</div>
-		<div>
-			<label for="apellido">Apellido</label>
-			<div>
-				<input type="text" id="apellido" th:field="*{apellido}">
+			<div class="form-group row">
+				<label for="identificador" class="col-form-label col-sm-2">Identificador</label>
+				<div class="row col-sm-4">
+					<input type="text" id="identificador" th:field="*{identificador}"
+						class="form-control">
+				</div>
+				<div th:if="${#fields.hasErrors('identificador')}"
+					th:errors="*{identificador}" class="alert alert-danger col-sm-2"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></div>
-		</div>
-		<div>
-			<label for="username">Username</label>
-			<div>
-				<!-- 'Original': <input type="text" name="username" id="username" th:value="${user.username}"> -->
-				<input type="text" id="username" th:field="*{username}">
+			<div class="form-group row">
+				<label for="nombre" class="col-form-label col-sm-2">Nombre</label>
+				<div class="row col-sm-4">
+					<input type="text" id="nombre" th:field="*{nombre}"
+						class="form-control">
+				</div>
+				<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="alert alert-danger col-sm-2"></div>
 			</div>
-			<!-- error.username es igual a errores.get('username') -->
-			<!-- 'Original': <div th:if="${error != null && error.containsKey('username')}"
+			<div class="form-group row">
+				<label for="apellido" class="col-form-label col-sm-2">Apellido</label>
+				<div class="row col-sm-4">
+					<input type="text" id="apellido" th:field="*{apellido}"
+						class="form-control">
+				</div>
+				<div th:if="${#fields.hasErrors('apellido')}"
+					th:errors="*{apellido}" class="alert alert-danger col-sm-2"></div>
+			</div>
+			<div class="form-group row">
+				<label for="username" class="col-form-label col-sm-2">Username</label>
+				<div class="row col-sm-4">
+					<!-- 'Original': <input type="text" name="username" id="username" th:value="${user.username}"> -->
+					<input type="text" id="username" th:field="*{username}"
+						class="form-control">
+				</div>
+				<!-- error.username es igual a errores.get('username') -->
+				<!-- 'Original': <div th:if="${error != null && error.containsKey('username')}"
 				th:text="${error.username}"></div>  -->
-			<!-- #fields.hasErrors Se usa para llamar a un helper de thymeleaf en este caso el de las validaciones de campos -->
-			<!-- th:errors llama a los errores que pueda haber -->
-			<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
-		</div>
-		<div>
-			<label for="password">Password</label>
-			<div>
-				<!-- 'Original': <input type="password" name="password" id="password"> -->
-				<input type="password" id="password" th:field="*{password}">
+				<!-- #fields.hasErrors Se usa para llamar a un helper de thymeleaf en este caso el de las validaciones de campos -->
+				<!-- th:errors llama a los errores que pueda haber -->
+				<div th:if="${#fields.hasErrors('username')}"
+					th:errors="*{username}" class="alert alert-danger col-sm-2"></div>
 			</div>
-			<!-- 'Original': <div th:if="${error != null && error.containsKey('password')}"
+			<div class="form-group row">
+				<label for="password" class="col-form-label col-sm-2">Password</label>
+				<div class="row col-sm-4">
+					<!-- 'Original': <input type="password" name="password" id="password"> -->
+					<input type="password" id="password" th:field="*{password}"
+						class="form-control">
+				</div>
+				<!-- 'Original': <div th:if="${error != null && error.containsKey('password')}"
 				th:text="${error.password}"></div>  -->
-			<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
-		</div>
-		<div>
-			<label for="email">Email</label>
-			<div>
-				<!-- 'Original': <input type="text" name="email" id="email" th:value="${user.email}"> -->
-				<input type="text" id="email" th:field="*{email}">
+				<div th:if="${#fields.hasErrors('password')}"
+					th:errors="*{password}" class="alert alert-danger col-sm-2"></div>
 			</div>
-			<!--  'Original': <div th:if="${error != null && error.containsKey('email')}"
+			<div class="form-group row">
+				<label for="email" class="col-form-label col-sm-2">Email</label>
+				<div class="row col-sm-4">
+					<!-- 'Original': <input type="text" name="email" id="email" th:value="${user.email}"> -->
+					<input type="text" id="email" th:field="*{email}"
+						class="form-control">
+				</div>
+				<!--  'Original': <div th:if="${error != null && error.containsKey('email')}"
 				th:text="${error.email}"></div>  -->
-			<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
-		</div>
-		<div>
-			<label for="cuenta">Cuenta</label>
-			<div>
-				<!-- input type text para poder usar las validaciones de typeMismatch -->
-				<input type="number" id="cuenta" th:field="*{cuenta}">
+				<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="alert alert-danger col-sm-2"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('cuenta')}" th:errors="*{cuenta}"></div>
-		</div>
-		<div>
-			<label for="fechaNac">Fecha Nacimiento</label>
-			<div>
-				<input type="date" id="fechaNac" th:field="*{fechaNac}"
-					placeholder="yyyy/MM/dd">
+			<div class="form-group row">
+				<label for="cuenta" class="col-form-label col-sm-2">Cuenta</label>
+				<div class="row col-sm-4">
+					<!-- input type text para poder usar las validaciones de typeMismatch -->
+					<input type="number" id="cuenta" th:field="*{cuenta}"
+						class="form-control">
+				</div>
+				<div th:if="${#fields.hasErrors('cuenta')}" th:errors="*{cuenta}" class="alert alert-danger col-sm-2"></div>
 			</div>
-			<div th:if="${#fields.hasErrors('fechaNac')}" th:errors="*{fechaNac}"></div>
-		</div>
-		<div>
-			<div>
-				<input type="submit" value="Enviar">
+			<div class="form-group row">
+				<label for="fechaNac" class="col-form-label col-sm-2">Fecha Nacimiento</label>
+				<div class="row col-sm-4">
+					<input type="date" id="fechaNac" th:field="*{fechaNac}"
+						placeholder="yyyy/MM/dd" class="form-control">
+				</div>
+				<div th:if="${#fields.hasErrors('fechaNac')}"
+					th:errors="*{fechaNac}" class="alert alert-danger col-sm-2"></div>
 			</div>
-		</div>
-		<input type="hidden" th:field="*{valorSecreto}">
-	</form>
+			<div class="form-group row">
+				<div>
+					<input type="submit" value="Enviar" class="btn btn-primary">
+				</div>
+			</div>
+			<input type="hidden" th:field="*{valorSecreto}">
+		</form>
+	</div>
 </body>
 </html>
