--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -3,29 +3,39 @@
 <head>
 <meta charset="UTF-8">
 <title th:text="${titulo}"></title>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+	crossorigin="anonymous">
 </head>
-<body>
-	<h3 th:text="${titulo}"></h3>
-
-	<ul>
-		<li th:text="${usuario.nombre}"></li>
-		<li th:text="${usuario.apellido}"></li>
-		<li th:text="${usuario.username}"></li>
-		<li th:text="${usuario.password}"></li>
-		<li th:text="${usuario.email}"></li>
-		<li th:text="${usuario.identificador}"></li>
-		<li th:text="${usuario.cuenta}"></li>
-		<li th:text="${usuario.pais.id}"></li>
-		<li th:text="${usuario.pais.codigo}"></li>
-		<li th:text="${usuario.pais.nombre}"></li>
-		<li th:text="'Habilitado: '+${usuario.habilitar}"></li>
-		<li th:text="'Genero: '+${usuario.genero}"></li>
-		<li th:text="${#dates.format(usuario.fechaNac, 'dd/MM/yyyy')}"></li>
-		<li th:text="${usuario.valorSecreto}"></li>
-	</ul>
-	<div>Roles</div>
-	<ul>
-		<li th:each="role: ${usuario.roles}" th:text="${role.rol} + ' => '+${role.id}+' => '+${role.nombre}"></li>
-	</ul>
+<body>	
+	<div class="container">
+	<a th:href="@{/form}" class="btn btn-success btn-lg my-3">Volver</a>
+		<ul class="list-group my-2">
+			<li class="list-group-item active" th:text="${titulo}"></li>
+			<li class="list-group-item" th:text="${usuario.nombre}"></li>
+			<li class="list-group-item" th:text="${usuario.apellido}"></li>
+			<li class="list-group-item" th:text="${usuario.username}"></li>
+			<li class="list-group-item" th:text="${usuario.password}"></li>
+			<li class="list-group-item" th:text="${usuario.email}"></li>
+			<li class="list-group-item" th:text="${usuario.identificador}"></li>
+			<li class="list-group-item" th:text="${usuario.cuenta}"></li>
+			<li class="list-group-item" th:text="${usuario.pais.id}"></li>
+			<li class="list-group-item" th:text="${usuario.pais.codigo}"></li>
+			<li class="list-group-item" th:text="${usuario.pais.nombre}"></li>
+			<li class="list-group-item"
+				th:text="'Habilitado: '+${usuario.habilitar}"></li>
+			<li class="list-group-item" th:text="'Genero: '+${usuario.genero}"></li>
+			<li class="list-group-item"
+				th:text="${#dates.format(usuario.fechaNac, 'dd/MM/yyyy')}"></li>
+			<li class="list-group-item" th:text="${usuario.valorSecreto}"></li>
+		</ul>		
+		<ul class="list-group my-3">
+			<li class="list-group-item active" th:text="'Roles'"></li>
+			<li class="list-group-item" th:each="role: ${usuario.roles}"
+				th:text="${role.rol} + ' => '+${role.id}+' => '+${role.nombre}"></li>
+		</ul>
+	</div>
 </body>
 </html>
