--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -3,11 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title th:text="${titulo}"></title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-	crossorigin="anonymous">
+<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
 	<h2 th:text="${titulo}"></h2>
@@ -23,23 +19,27 @@
 			</div>
 			<div class="form-group row">
 				<label class="col-form-label col-sm-2">Genero</label>
-				<div th:each="gen: ${generos}"  class="row col-sm-2">
+				<div th:each="gen: ${generos}" class="row col-sm-2">
 					<input type="radio" th:field="*{genero}" th:value="${gen}"
 						class="form-check-input col-sm-1"> <label
-						th:for="${#ids.prev('genero')}" th:text="${gen}" class="col-form-label col-sm-1"></label>
+						th:for="${#ids.prev('genero')}" th:text="${gen}"
+						class="col-form-label col-sm-1"></label>
 				</div>
-				<div th:if="${#fields.hasErrors('genero')}" th:errors="*{genero}" class="alert alert-danger col-sm-2 col-sm-1"></div>
+				<div th:if="${#fields.hasErrors('genero')}" th:errors="*{genero}"
+					class="alert alert-danger col-sm-2 col-sm-1"></div>
 			</div>
 			<div class="form-group row">
 				<label class="col-form-label col-sm-2">Roles</label>
-				<div th:each="role: ${listaRoles}"  class="row col-sm-2">
+				<div th:each="role: ${listaRoles}" class="row col-sm-2">
 					<!-- #lists.contains('roles', role) = Helper de thymeleaf que comprueba si en la lista del primer parámetro aparece el segundo parámetro  -->
 					<input type="checkbox" th:field="*{roles}" th:value="${role.id}"
 						th:checked="${#lists.contains(usuario.roles, role)}"
 						class="form-check-input col-sm-1"> <label
-						th:for="${#ids.prev('roles')}" th:text="${role.nombre}" class="col-form-label col-sm-1"></label>
+						th:for="${#ids.prev('roles')}" th:text="${role.nombre}"
+						class="col-form-label col-sm-1"></label>
 				</div>
-				<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}" class="alert alert-danger col-sm-2 col-sm-1"></div>
+				<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}"
+					class="alert alert-danger col-sm-2 col-sm-1"></div>
 			</div>
 			<div class="form-group row">
 				<label for="pais" class="col-form-label col-sm-2">Pais</label>
@@ -51,7 +51,8 @@
 							th:value="${pais.id}"></option>
 					</select>
 				</div>
-				<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}" class="alert alert-danger col-sm-2"></div>
+				<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}"
+					class="alert alert-danger col-sm-2"></div>
 			</div>
 			<div class="form-group row">
 				<label for="identificador" class="col-form-label col-sm-2">Identificador</label>
@@ -68,7 +69,8 @@
 					<input type="text" id="nombre" th:field="*{nombre}"
 						class="form-control">
 				</div>
-				<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="alert alert-danger col-sm-2"></div>
+				<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"
+					class="alert alert-danger col-sm-2"></div>
 			</div>
 			<div class="form-group row">
 				<label for="apellido" class="col-form-label col-sm-2">Apellido</label>
@@ -115,7 +117,8 @@
 				</div>
 				<!--  'Original': <div th:if="${error != null && error.containsKey('email')}"
 				th:text="${error.email}"></div>  -->
-				<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="alert alert-danger col-sm-2"></div>
+				<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
+					class="alert alert-danger col-sm-2"></div>
 			</div>
 			<div class="form-group row">
 				<label for="cuenta" class="col-form-label col-sm-2">Cuenta</label>
@@ -124,10 +127,12 @@
 					<input type="number" id="cuenta" th:field="*{cuenta}"
 						class="form-control">
 				</div>
-				<div th:if="${#fields.hasErrors('cuenta')}" th:errors="*{cuenta}" class="alert alert-danger col-sm-2"></div>
+				<div th:if="${#fields.hasErrors('cuenta')}" th:errors="*{cuenta}"
+					class="alert alert-danger col-sm-2"></div>
 			</div>
 			<div class="form-group row">
-				<label for="fechaNac" class="col-form-label col-sm-2">Fecha Nacimiento</label>
+				<label for="fechaNac" class="col-form-label col-sm-2">Fecha
+					Nacimiento</label>
 				<div class="row col-sm-4">
 					<input type="date" id="fechaNac" th:field="*{fechaNac}"
 						placeholder="yyyy/MM/dd" class="form-control">
