--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -3,15 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title th:text="${titulo}"></title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-	crossorigin="anonymous">
+<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
-<body>	
+<body>
 	<div class="container">
-	<a th:href="@{/form}" class="btn btn-success btn-lg my-3">Volver</a>
+		<a th:href="@{/form}" class="btn btn-success btn-lg my-3">Volver</a>
 		<ul class="list-group my-2">
 			<li class="list-group-item active" th:text="${titulo}"></li>
 			<li class="list-group-item" th:text="${usuario.nombre}"></li>
@@ -30,7 +26,7 @@
 			<li class="list-group-item"
 				th:text="${#dates.format(usuario.fechaNac, 'dd/MM/yyyy')}"></li>
 			<li class="list-group-item" th:text="${usuario.valorSecreto}"></li>
-		</ul>		
+		</ul>
 		<ul class="list-group my-3">
 			<li class="list-group-item active" th:text="'Roles'"></li>
 			<li class="list-group-item" th:each="role: ${usuario.roles}"
